@@ -1,0 +1,13 @@
+username=
+password=
+server_host=localhost
+secure=false
+server_port=80
+verbose=2
+
+proxy_username=foo
+proxy_password=bar
+proxy_host=
+proxy_port=
+;xmlrpc_server_file="/seagull/trunk/www/rpc/server.php?start_debug=1&debug_port=10000&debug_host=10.0.0.180,127.0.0.1&send_sess_end=1&debug_no_cache=1117027417706&debug_stop=1&debug_url=1&debug_new_session=1"
+xmlrpc_server_file="/seagull/trunk/www/rpc/server.php"
